--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <select id="gameTypeSelect">
           <option disabled selected value></option>
           <option value="country-cities">Country-Cities</option>
-          <option value="country-county">Country - Counties</option>
+          <option value="country-counties">Country - Counties</option>
           <option value="county-cities">County - Cities</option>
         </select>
       </div>
