--- a/index.html
+++ b/index.html
@@ -50,8 +50,10 @@
         <select id="gameTypeSelect">
           <option disabled selected value></option>
           <option value="country-cities">Country-Cities</option>
-          <option value="country-counties">Country - Counties</option>
-          <option value="county-cities">County - Cities</option>
+          <option value="country-counties-4">Country - Counties (4)</option>
+          <option value="country-counties-6">Country - Counties (6)</option>
+          <option value="county-4-cities">County (4) - Cities</option>
+          <option value="county-6-cities">County (6) - Cities</option>
         </select>
       </div>
 
